[gd_scene load_steps=35 format=3 uid="uid://dbuff07o7u7uv"]

[ext_resource type="Script" path="res://scenes/boss/boss.gd" id="1_e6ywe"]
[ext_resource type="Texture2D" uid="uid://bakhbj26yyef6" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00000.png" id="2_44g8e"]
[ext_resource type="Texture2D" uid="uid://b8y757i86oeef" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00002.png" id="3_wss6a"]
[ext_resource type="Texture2D" uid="uid://0os6url7gstr" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00004.png" id="4_5fj5b"]
[ext_resource type="Texture2D" uid="uid://d385xrn4100hk" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00006.png" id="5_y658h"]
[ext_resource type="Texture2D" uid="uid://cstjdkhudc2e6" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00008.png" id="6_opgwp"]
[ext_resource type="Texture2D" uid="uid://bij3v643k46lc" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00010.png" id="7_t0nin"]
[ext_resource type="Texture2D" uid="uid://nmv0t4rs5iu" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00012.png" id="8_lruvc"]
[ext_resource type="Texture2D" uid="uid://ca62tra3j7nwj" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00014.png" id="9_31qfa"]
[ext_resource type="Texture2D" uid="uid://uqh1oesnho2p" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00016.png" id="10_h7e5y"]
[ext_resource type="Texture2D" uid="uid://dd3xmt34osu0j" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00018.png" id="11_o8twm"]
[ext_resource type="Texture2D" uid="uid://dn1ln6llbltd3" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00020.png" id="12_kssb4"]
[ext_resource type="Texture2D" uid="uid://cn1i4itoeujkn" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00022.png" id="13_nmrsa"]
[ext_resource type="Texture2D" uid="uid://1l872vkvrt3j" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00024.png" id="14_0c80w"]
[ext_resource type="Texture2D" uid="uid://cpia8c4558sg6" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00026.png" id="15_xwf0p"]
[ext_resource type="Texture2D" uid="uid://6povidrlps47" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00028.png" id="16_fvapo"]
[ext_resource type="Texture2D" uid="uid://326gw5ijjvtl" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00030.png" id="17_8i763"]
[ext_resource type="Texture2D" uid="uid://b2lms8du64quf" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00032.png" id="18_04x46"]
[ext_resource type="Texture2D" uid="uid://dqilrmkdvadgq" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00034.png" id="19_r5gnh"]
[ext_resource type="Texture2D" uid="uid://dexhtxwuwd6p" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00036.png" id="20_6vgbn"]
[ext_resource type="Texture2D" uid="uid://cuivl5qb2u30s" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00038.png" id="21_fv2l6"]
[ext_resource type="Texture2D" uid="uid://chhcuwhhv4b5g" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00040.png" id="22_gdv3h"]
[ext_resource type="Texture2D" uid="uid://dnqqjkvhd8ibo" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00042.png" id="23_vwr1i"]
[ext_resource type="Texture2D" uid="uid://bok4gbugvd6t5" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00044.png" id="24_skkec"]
[ext_resource type="Texture2D" uid="uid://c7e4mrdbeacbo" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00046.png" id="25_t3k50"]
[ext_resource type="Texture2D" uid="uid://bwaf6ukoe5y53" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00048.png" id="26_p3iyo"]
[ext_resource type="Texture2D" uid="uid://cbu2spemhfsot" path="res://assets/oko/oko-idle/3-4-oka-poetyckiego_00050.png" id="27_mex4o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q4ewq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_44g8e")
}, {
"duration": 1.0,
"texture": ExtResource("3_wss6a")
}, {
"duration": 1.0,
"texture": ExtResource("4_5fj5b")
}, {
"duration": 1.0,
"texture": ExtResource("5_y658h")
}, {
"duration": 1.0,
"texture": ExtResource("6_opgwp")
}, {
"duration": 1.0,
"texture": ExtResource("7_t0nin")
}, {
"duration": 1.0,
"texture": ExtResource("8_lruvc")
}, {
"duration": 1.0,
"texture": ExtResource("9_31qfa")
}, {
"duration": 1.0,
"texture": ExtResource("10_h7e5y")
}, {
"duration": 1.0,
"texture": ExtResource("11_o8twm")
}, {
"duration": 1.0,
"texture": ExtResource("12_kssb4")
}, {
"duration": 1.0,
"texture": ExtResource("13_nmrsa")
}, {
"duration": 1.0,
"texture": ExtResource("14_0c80w")
}, {
"duration": 1.0,
"texture": ExtResource("15_xwf0p")
}, {
"duration": 1.0,
"texture": ExtResource("16_fvapo")
}, {
"duration": 1.0,
"texture": ExtResource("17_8i763")
}, {
"duration": 1.0,
"texture": ExtResource("18_04x46")
}, {
"duration": 1.0,
"texture": ExtResource("19_r5gnh")
}, {
"duration": 1.0,
"texture": ExtResource("20_6vgbn")
}, {
"duration": 1.0,
"texture": ExtResource("21_fv2l6")
}, {
"duration": 1.0,
"texture": ExtResource("22_gdv3h")
}, {
"duration": 1.0,
"texture": ExtResource("23_vwr1i")
}, {
"duration": 1.0,
"texture": ExtResource("24_skkec")
}, {
"duration": 1.0,
"texture": ExtResource("25_t3k50")
}, {
"duration": 1.0,
"texture": ExtResource("26_p3iyo")
}, {
"duration": 1.0,
"texture": ExtResource("27_mex4o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_d54ab"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_7q1f0"]
resource_name = "get_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 3.14159), Vector3(0, 0, 6.28319)]
}

[sub_resource type="Animation" id="Animation_y6hls"]
resource_name = "in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -5, 0), Vector3(0, 2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_oidc4"]
resource_name = "move_to_player"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(10, 10, 10)]
}

[sub_resource type="Animation" id="Animation_pisb3"]
resource_name = "out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2, 0), Vector3(0, -10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0yeai"]
_data = {
"RESET": SubResource("Animation_d54ab"),
"get_hit": SubResource("Animation_7q1f0"),
"in": SubResource("Animation_y6hls"),
"move_to_player": SubResource("Animation_oidc4"),
"out": SubResource("Animation_pisb3")
}

[node name="Boss" type="Node3D" groups=["boss"]]
script = ExtResource("1_e6ywe")

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
no_depth_test = true
sprite_frames = SubResource("SpriteFrames_q4ewq")
autoplay = "default"
frame_progress = 0.0731481

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Lorem ipsum sin dolont amend"

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0yeai")
}

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
